- adding some page 3 - fixed spacing util

--- a/src/scss/components/pdf/index.scss
+++ b/src/scss/components/pdf/index.scss
@@ -13,6 +13,10 @@
     margin: 0 auto;
 }
 
+.pdf-statement {
+    height: 80px;
+}
+
 .cell {
     display: flex;
     border-top: 1px solid #000;
